stateDiagram-v2
    [*] --> ORDER_CREATED

    ORDER_CREATED --> PAYMENT_REQUESTED : START_ORDER
    PAYMENT_REQUESTED --> PAYMENT_COMPLETED : PAYMENT_SUCCESS
    PAYMENT_REQUESTED --> FAILED : PAYMENT_FAILURE
    PAYMENT_COMPLETED --> INVENTORY_RESERVED : INVENTORY_SUCCESS
    INVENTORY_RESERVED --> ORDER_COMPLETED : COMPLETE
    PAYMENT_COMPLETED --> COMPENSATING_PAYMENT : INVENTORY_FAILURE
    COMPENSATING_PAYMENT --> COMPENSATING_INVENTORY : PAYMENT_COMPENSATED
    COMPENSATING_PAYMENT --> FAILED : PAYMENT_COMPENSATE_FAIL
    COMPENSATING_INVENTORY --> COMPENSATED : INVENTORY_COMPENSATED
    COMPENSATING_INVENTORY --> FAILED : INVENTORY_COMPENSATE_FAIL

    ORDER_COMPLETED --> [*]
    COMPENSATED --> [*]
    FAILED --> [*]